[gd_scene load_steps=5 format=3 uid="uid://bwa4tmi1yanqs"]

[ext_resource type="Script" path="res://solar_system/planet_materials/pickable_object.gd" id="1_vxo5h"]
[ext_resource type="PackedScene" uid="uid://b14k1eb3okfho" path="res://resources/sfxs/collection_resource_finished_particles.tscn" id="2_d3b6w"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ppgxq"]
radius = 1.5

[sub_resource type="SphereMesh" id="SphereMesh_mde6k"]

[node name="PickableObject" type="Node3D"]
script = ExtResource("1_vxo5h")
_collect_sfx_scene = ExtResource("2_d3b6w")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_ppgxq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D"]
mesh = SubResource("SphereMesh_mde6k")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
